docs/errors/examples/forward-reference-in-function/forward-reference-in-function.expected.txt
error[E1201]: forward reference inside function body
  --> forward-reference-in-function.grob:4:14
   |
 4 |     prefix := tag.toUpper()
   |               ^^^
   |
   = note: 'tag' is declared on line 5, after this use
   = note: forward references are permitted at the top level but not inside function bodies
   = help: move the declaration of 'tag' above its first use
